# mydockerproject

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  TESTS.md  main  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
lib/: CMakeLists.txt  observer.h
tests/: CMakeLists.txt  mock_test.cpp  sample_test.cpp
